Enum "user_role" {
  "unknown"
  "renter"
  "staff"
  "admin"
}

Enum "vehicle_at_stations_status_t" {
  maintain
  available
  booked
}

Enum "booking_status" {
  "pending_verification"
  "verified"
  "cancelled"
}

Enum "booking_verification_status" {
  "pending"
  "approved"
  "rejected_mismatch"
  "rejected_other"
}

Enum "fee_type" {
  "total_booking_fee"
  "over_deposit_fee"
  "other"
}

Enum "payment_status" {
  "paid"
  "refunded"
}

Enum "payment_method" {
  "unknown"
  "cash"
  "bank_transfer"
}

Enum "rental_status" {
  "reserved"
  "in_progress"
  "completed"
  "late"
  "cancelled"
}

Enum "signature_event_type" {
  "pickup"
  "dropoff"
}

Enum "inspection_type" {
  "pre_rental"
  "post_rental"
}

Enum "kyc_status" {
  "submitted"
  "approved"
  "rejected"
  "expired"
}

Enum "kyc_type" {
  "national_id"
  "driver_license"
  "passport"
  "other"
}

Enum "transfer_status" {
  "draft"
  "approved"
  "in_transit"
  "completed"
  "cancelled"
}

Enum "contract_status" {
  "issued"
  "partially_signed"
  "signed"
  "voided"
  "expired"
}

Enum "party_role" {
  "renter"
  "staff"
  "other"
}

Enum "signature_type" {
  "drawn"
  "typed"
  "digital_cert"
}

Table "users" {
  "user_id" INT [pk, increment]
  "role" user_role [not null, default: 'unknown']
  "email" VARCHAR(255) [unique, not null]
  "password_hash" VARCHAR(255) [not null]
  "full_name" VARCHAR(200) [not null]
  "phone" VARCHAR(50)
  "created_at" timestamptz [not null, default: `now()`]
  is_active boolean [not null, default: true]
}

Table "renters" {
  "user_id" INT [pk]
  "driver_license_no" VARCHAR(64)
  "date_of_birth" timestamptz
  "address" VARCHAR(500)
  risk_score integer [default: 0, note: '0-100, higher = riskier']
}

Table "staff" {
  "user_id" INT [pk]
  "employee_code" VARCHAR(50) [unique, not null]
  "position" VARCHAR(100) [not null]
  "hire_date" timestamptz [not null, default: `now()`]
}

Table "admins" {
  "user_id" INT [pk]
  "title" VARCHAR(100)
  "notes" VARCHAR(500)
  "hire_date" timestamptz [not null, default: `now()`]
}

Table "stations" {
  "station_id" INT [pk, increment]
  "name" VARCHAR(150) [not null]
  "address" VARCHAR(500) [not null]
  "latitude" DOUBLEPRECISION
  "longitude" DOUBLEPRECISION
  is_active boolean [not null, default: true]
}

Table "vehicles" {
  "vehicle_id" INT [pk, increment]
  "make" VARCHAR(100) [not null]
  "model" VARCHAR(100) [not null]
  "model_year" INT [not null]
  "category" VARCHAR(50) [not null, default: 'EV']
  "battery_capacity_kwh" DOUBLEPRECISION
  "range_km" DOUBLEPRECISION
  vin_number varchar(50) [unique, note: 'Vehicle Identification Number']
  img_url VARCHAR(2000)
  is_active boolean [not null, default: true]
}

Table "staff_at_stations" {
  "staff_id" INT [not null]
  "start_time" timestamptz [not null, default: `now()`]
  "station_id" INT [not null]
  "end_time" timestamptz
  "role_at_station" VARCHAR(100)

  Indexes {
    (staff_id, start_time) [pk]
    (staff_id, end_time) [name: "ix_staff_at_stations_staff_endtime"]
    (station_id, end_time) [name: "ix_staff_at_stations_station_endtime"]
  }
}

Table "vehicle_at_stations" {
  "vehicle_at_station_id" INT [pk, increment]
  "vehicle_id" INT [not null]
  "station_id" INT [not null]
  "start_time" timestamptz [not null, default: `now()`]
  "end_time" timestamptz
  "current_battery_capacity_kwh" DOUBLEPRECISION
  current_mileage integer [not null]
  "status" vehicle_at_stations_status_t
  Indexes {
    (vehicle_id, start_time) [unique, name: "ux_vehicle_at_stations_vehicle_start"]
    (vehicle_id, end_time) [name: "ix_vehicle_at_stations_vehicle_end"]
    (station_id, end_time) [name: "ix_vehicle_at_stations_station_end"]
  }
}

Table "bookings" {
  "booking_id" INT [pk, increment]
  "renter_id" INT [not null]
  "vehicle_at_station_id" INT [not null]
  expected_return_datetime timestamptz [not null]
  "status" booking_status [not null , default: 'pending_verification']
  verification_status booking_verification_status [not null, default: 'pending']
  verified_by_staff_id INT
  verified_at timestamptz
  cancel_reason varchar(500)
  total_booking_fee_amount numeric(18,2) [not null, default: 0]
  deposit_fee_amount numeric(18,2) [not null, default: 0]
  rental_fee_amount numeric(18,2) [not null, default: 0]

  Indexes {
    renter_id [name: "ix_bookings_renter"]
    vehicle_at_station_id [name: "ix_bookings_vehicle_at_station"]
  }
}

Table "fees" {
  "fee_id" INT [pk, increment]
  "booking_id" INT [not null]
  "type" fee_type [not null, default: 'deposit']
  "description" VARCHAR(200) [not null]
  "rental_fee" NUMERIC(18,2) [not null]
  "deposit" NUMERIC(18,2) [not null]
  "created_at" timestamptz [not null, default: `now()`]

  Indexes {
    booking_id [unique, name: "ux_fees_deposit_per_booking"]
  }
}

Table "payments" {
  "payment_id" INT [pk]
  "method" payment_method [not null, default: 'unknown']
  "status" payment_status [not null, default: 'paid']
  "amount_paid" NUMERIC(18,2) [not null]
  "transaction_code"  VARCHAR(200)
}

Table "rentals" {
  "rental_id" INT [pk, increment]
  "booking_id" INT [unique, not null]
  "vehicle_id" INT [not null]
	pickup_datetime datetime [ not null ]
	expected_return_datetime datetime
	actual_return_datetime datetime
  "status" rental_status [not null, default: 'reserved']
  "score" INT
  "comment" VARCHAR(2000)
  "rated_at" timestamptz [not null, default: `now()`]
  Indexes {
    vehicle_id [name: "ix_rentals_vehicle"]
  }
}

Table "contracts" {
  "contract_id" INT [pk, increment]
  "rental_id" INT [not null]
  "document_url" VARCHAR(2000)
  completed_at timestamptz
  "create_at" timestamptz [not null, default: `now()`]
}

Table "inspections" {
  "inspection_id" INT [pk, increment]
  "rental_id" INT [not null]
  "type" inspection_type [not null, default: 'pre_rental']
  "inspected_at" timestamptz [not null, default: `now()`]
  "inspector_staff_id" INT
  "current_battery_capacity_kwh" DOUBLEPRECISION
  current_mileage integer [not null]


  Indexes {
    (rental_id, type) [unique, name: "ux_inspections_rental_type"]
  }
}

Table "reports" {
  "report_id" INT [pk, increment]
  "inspection_id" INT [not null]
  "damage_notes" VARCHAR(2000)
  "damage_found" BOOLEAN [not null, default: FALSE]
  "damage_price" money
  "is_over_deposit" bool
  "over_deposit_fee_amount" money

  Indexes {
    inspection_id [name: "ix_reports_inspection"]
  }
}

Table "reports_photo" {
  "reports_photo_id" INT [pk, increment]
  report_id INT
  "inspection_id" INT [not null]
  "url" NVARCHAR(500) [not null]
  "label" NVARCHAR(200)
  "created_at" datetime2(3) [not null, default: `SYSUTCDATETIME()`]
}

Table "kycs" {
  "kyc_id" INT [pk, increment]
  "renter_id" INT [not null]
  "type" kyc_type [not null, default: 'driver_license']
  "document_number" VARCHAR(100) [not null]
  "expiry_date" timestamptz
  "status" kyc_status [not null, default: 'submitted']
  "submitted_at" timestamptz [not null, default: `now()`]
  "verified_at" timestamptz

  Indexes {
    renter_id [name: "ix_kycs_renter"]
  }
}

Table "pricings" {
  "pricing_id" INT [pk, increment]
  "vehicle_id" INT [not null]
  "price_per_hour" NUMERIC(18,2) [not null]
  "price_per_day" NUMERIC(18,2)
  "effective_from" timestamptz [not null]
  "effective_to" timestamptz
	deposit_amount decimal(10,2) [not null, default: 0]
  late_return_fee_per_hour decimal(10,2)
  mileage_limit_per_day integer [note: 'km per day included']
	excess_mileage_fee decimal(10,2) [note: 'fee per km over limit']

  Indexes {
    (vehicle_id, effective_from) [unique, name: "ux_pricings_vehicle_effective_from"]
  }
}

Ref:"users"."user_id" < "renters"."user_id" [delete: cascade]

Ref:"users"."user_id" < "staff"."user_id" [delete: cascade]

Ref:"users"."user_id" < "admins"."user_id" [delete: cascade]

Ref:"staff"."user_id" < "staff_at_stations"."staff_id" [delete: cascade]

Ref:"stations"."station_id" < "staff_at_stations"."station_id" [delete: cascade]

Ref:"vehicles"."vehicle_id" < "vehicle_at_stations"."vehicle_id" [delete: cascade]

Ref:"stations"."station_id" < "vehicle_at_stations"."station_id" [delete: cascade]

Ref:"renters"."user_id" < "bookings"."renter_id"

Ref:"vehicle_at_stations"."vehicle_at_station_id" < "bookings"."vehicle_at_station_id"


Ref:"bookings"."booking_id" < "fees"."booking_id" [delete: cascade]

Ref:"fees"."fee_id" < "payments"."payment_id" [delete: cascade]

Ref:"bookings"."booking_id" < "rentals"."booking_id" [delete: cascade]

Ref:"vehicles"."vehicle_id" < "rentals"."vehicle_id"

Ref:"rentals"."rental_id" - "contracts"."rental_id" [delete: cascade]



ref: reports.report_id < reports_photo.report_id


// Ref:"contracts"."contract_id" < "signatures"."contract_id" [delete: cascade]



// Ref:"contracts"."contract_id" < "contract_events"."contract_id" [delete: cascade]



Ref:"rentals"."rental_id" < "inspections"."rental_id" [delete: cascade]

Ref:"staff"."user_id" < "inspections"."inspector_staff_id" [delete: set null]
Ref:"inspections"."inspection_id" < "reports"."inspection_id" [delete: cascade]

Ref:"renters"."user_id" < "kycs"."renter_id" [delete: cascade]

Ref:"vehicles"."vehicle_id" < "pricings"."vehicle_id" [delete: cascade]

// Ref:"stations"."station_id" < "vehicle_transfers"."from_station_id"

// Ref:"stations"."station_id" < "vehicle_transfers"."to_station_id"

// Ref:"admins"."user_id" < "vehicle_transfers"."created_by_admin_id"

// Ref:"admins"."user_id" < "vehicle_transfers"."approved_by_admin_id"

// Ref: vehicle_transfers.vehicle_id > vehicles.vehicle_id
// Ref:"vehicle_transfers"."vehicle_transfer_id" < "vehicle_transfer_items"."vehicle_transfer_id" [delete: cascade]

// Ref:"vehicles"."vehicle_id" < "vehicle_transfer_items"."vehicle_id"

// Ref:"staff"."user_id" < "vehicle_transfer_items"."picked_up_by_staff_id" [delete: set null]

// Ref:"staff"."user_id" < "vehicle_transfer_items"."dropped_off_by_staff_id" [delete: set null]

// Ref:"staff"."user_id" < "staff_transfers"."staff_id"

// Ref:"stations"."station_id" < "staff_transfers"."from_station_id"

// Ref:"stations"."station_id" < "staff_transfers"."to_station_id"

// Ref:"admins"."user_id" < "staff_transfers"."created_by_admin_id"

// Ref:"admins"."user_id" < "staff_transfers"."approved_by_admin_id"
